[package]
name = "scream_cypher"
description = "A CLI tool and library for encrypting and decrypting messages using the scream cypher."
repository = "https://github.com/icorbrey/scream_cypher"
keywords = ["cli", "cryptography", "cypher", "xkcd"]
categories = ["command-line-utilities", "cryptography"]
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "1.0.0"
edition = "2021"

[lib]
name = "scream_cypher"
path = "src/lib.rs"

[[bin]]
name = "scream"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.30", features = ["cargo"] }
phf = { version = "0.11.3", features = ["macros"] }
